
27. "Voorwaarden" pagina
    Zie voorwaarden.html in git repository. <div class="grid-md-6 alpha omega"> mag weg. Stylesheet aangepast voor 
    achtergrondkleur.

28. TODO

29. Stappen bovenaan? Was dat niet nog TBD

30. TODO (snap het niet)

31. Stylesheet aangepast.

----------------------------------------------------------------

24.06

- footer: HTML in bibliotheek-2.html en stylesheet aangepast (LET OP: HTML lichtjes aangepast na de middag)
- stappen bovenaan de pagina: stylesheet aangepast; zie registreer-2.html regel 27-36. Regels 232-235 mogen weg.
- bibliotheek-pagina: link naar contact, bibliotheek staat nu bovenaan onder titel - zie bibliotheek-2.html - regel 40-49. Regels 99-103 mogen weg.
- mijn bibliotheken-pagina: "verwijder dit lidmaatschap": <a class="link red" /> ipv <a class="red" />. Stylesheet aangepast.
- mijn bibliotheken-pagina: blauwe achtergrond op desktop & mobile: <div class="message info no-bg" /> ipv <div class="message info" />. Stylesheet aangepast.
- informatietext op aanmeldpagina: zie aanmelden-1.html. Er zijn wat divs bijgekomen (met class resp-false en resp-true). Javascript bibnet.js is aangepast. Stylesheet is aangepast.
- popups op mobile: stylesheet is aangepast.

24.6 namiddag

- menu-items moeten grijs worden bij hover: stylesheet aangepast voor mobile/desktop/tablet. Geen HTML-aanpassingen nodig.
- bibliotheek-pagina: icoontjes onderaan. Zie bibliotheek-2.html, vanaf lijn 172 tot lijn 178. Let op: de <section> "historiek" heeft nu niet meer de class="last". Sprite is veranderd. Stylesheet aangepast.


----------------------------------------------------------------


25.06

- ipad tablet portrait: registratie - "volgende knop": sprite.png en stylesheet aangepast
- achtergrond menu transparant maken op mobile: stylesheet aangepast
- "Vorige" knop bij registreer: zie registreer-1.html (regels 42-44). Extra <div class="form-item"> met <a>. Stylesheet hiervoor ook aangepast.