@@ -160,7 +160,10 @@
 			    <section class="betaling section">
 			      <h2>Te betalen bedrag</h2>
 			      <div class="bedrag">30,10 euro</div>
-			      <a href="#" class="blue">Klik hier voor meer details</a>
+            <a href="#" class="blue show-details">details <span>&darr;</span></a>
+            <div class="details" style="display:none;">
+              En hier wat over de centjes
+            </div>			    
 			    </section>
 			    <section class="historiek section">
 			      <h2>Uitleenhistoriek</h2>
